--- a/LICENSE.md/.gitignore/package.json
+++ b/LICENSE.md/.gitignore/package.json
@@ -9,6 +9,6 @@
   "author": "Jacky99#0975",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "11.4.2",
+    "discord.js": "^11.4.2",
   }
 }  
